# open62541

./: CMakeLists.txt
arch/: CMakeLists.txt
arch/patmos/: CMakeLists.txt  ua_architecture.h  ua_architecture_functions.c  ua_clock.c
debian/: changelog
include/open62541/: config.h.in
include/open62541/plugin/: log.h
plugins/: ua_pubsub_udp.c
src/: ua_types.c  ua_types_encoding_binary.c
src/pubsub/: ua_pubsub_networkmessage.c  ua_pubsub_writer.c
